set a very basic date widget

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
   <!-- Services -->
   <script src="/app/stocks/api.service.js"></script>
   <script src="/app/stocks/stocks.service.js"></script>
+  <!-- Directives -->
+  <script src="/app/date/date.directive.js"></script>
   <!-- Controllers -->
   <script src="/app/main/main.controller.js"></script>
 
