working on stocks

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
   <script src="/app/stocks/stocks.service.js"></script>
   <!-- Directives -->
   <script src="/app/date/date.directive.js"></script>
+  <script src="/app/stocks/stocks.directive.js"></script>
   <!-- Controllers -->
   <script src="/app/main/main.controller.js"></script>
+  <script src="/app/stocks/stocks.controller.js"></script>
 
 </html>
