--- a/app/main/main.html
+++ b/app/main/main.html
@@ -1,9 +1,12 @@
-<div class="col-sm-4">
-  <stocks></stocks>
-</div>
+<div>
 
-<div class="col-sm-8">
-  <date-widget></date-widget>
-  <div ui-view="content">
+  <div class="col-sm-4">
+    <stock-index></stock-index>
   </div>
+
+  <div class="col-sm-8">
+    <date-widget></date-widget>
+    <div ui-view="content"></div>
+  </div>
+
 </div>
