--- a/app/date/date.view.html
+++ b/app/date/date.view.html
@@ -1,3 +1,6 @@
 <div id="date-widget">
-  <input type="range" min="0" max="100" step="10">
+  <label class="date-label" id="start-date-label">{{ startDate }}</label>
+  <label class="date-label" id="end-date-label">{{ endDate }}</label>
+  <input type="range" min="0" max="{{ daysBetween  }}" step="1" ng-model="dayVal">
+  <label class="date-label" id="current-date-label">Current Date: {{ currentDate }}</label>
 </div>
