--- a/app/date/date.view.html
+++ b/app/date/date.view.html
@@ -3,4 +3,5 @@
   <label class="date-label" id="end-date-label">{{ endDate }}</label>
   <input type="range" min="0" max="{{ daysBetween  }}" step="1" ng-model="dayVal">
   <label class="date-label" id="current-date-label">Current Date: {{ currentDate }}</label>
+  <!--TODO: turn current date into input box when clicked-->
 </div>
