created yahoo query builder

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
         <div class="container-fluid">
           <ul class="nav navbar-nav navbar-right">
-            <li><a ui-sref="main.portfolio">Portfolio</a></li>
-            <li><a ui-sref="main.trade">Trade</a></li>
-            <li><a ui-sref="main.transactions">Transactions</a></li>
+            <li><a ui-sref="app.portfolio">Portfolio</a></li>
+            <li><a ui-sref="app.trade">Trade</a></li>
+            <li><a ui-sref="app.transactions">Transactions</a></li>
           </ul>
         </div>
 
