working on modifying date

--- a/app/stocks/stocks.view.html
+++ b/app/stocks/stocks.view.html
@@ -1,2 +1,12 @@
-<table class="table">
+<table id="stocks-index" class="table">
+  <thead>
+    <tr>
+      <th>Symbol</th>
+      <th>Price</th>
+      <th>1d</th>
+      <th>7d</th>
+      <th>30d</th>
+      <th>Trade?</th>
+    </tr>
+  </thead>
 </table>
