refactored date widget but stuff broke

--- a/app/date/date.view.html
+++ b/app/date/date.view.html
@@ -1,7 +1,7 @@
 <div id="date-widget">
-  <label class="date-label" id="start-date-label">{{ startDate }}</label>
-  <label class="date-label" id="end-date-label">{{ endDate }}</label>
+  <label class="date-label" id="start-date-label">{{ startDate | date }}</label>
+  <label class="date-label" id="end-date-label">{{ endDate | date }}</label>
   <input type="range" min="0" max="{{ daysBetween  }}" step="1" ng-model="dayVal">
-  <label class="date-label" id="current-date-label">Current Date: {{ currentDate }}</label>
+  <label class="date-label" id="current-date-label">Current Date: {{ currentDate | date }}</label>
   <!--TODO: turn current date into input box when clicked-->
 </div>
