--- a/app/stocks/stocks.view.html
+++ b/app/stocks/stocks.view.html
@@ -1,3 +1,7 @@
+<form class="form-group">
+  <input type="text" class="form-control" ng-model="symbol">
+</form>
+
 <table id="stocks-index" class="table">
   <thead>
     <tr>
@@ -10,12 +14,12 @@
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="(company, data) in stockData">
-      <td>{{ company }}</td>
-      <td>{{ data["Price"] | number : 2 }}</td>
-      <td>{{ data["1d"] | number : 2 }}</td>
-      <td>{{ data["7d"] | number : 2 }}</td>
-      <td>{{ data["30d"]  | number : 2 }}</td>
+    <tr ng-repeat="data in stockData | orderBy:'company' | filter:symbol">
+      <td>{{ data.company }}</td>
+      <td>{{ data.price | currency : $ : 2 }}</td>
+      <td>{{ data["1d"] | currency : $ : 2 }}</td>
+      <td>{{ data["7d"] | currency : $ : 2 }}</td>
+      <td>{{ data["30d"]  | currency : $ : 2 }}</td>
     </tr>
   </tbody>
 </table>
