--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="col-sm-7">
           <div ui-view="date-widget"></div>
-          <div ui-view="content"></div>
+          <div ui-view="main-section"></div>
         </div>
 
       </div>
