--- a/app/trade/trade.view.html
+++ b/app/trade/trade.view.html
@@ -38,7 +38,7 @@
     <div class="col-xs-12 col-md-6">
 
       <label>Cash Available:</label>
-      <div class="cash-available">N/A</div>
+      <div class="cash-available">{{ cash | currency }}</div>
 
       <label>Order Status:</label>
       <div class="order-status">N/A</div>
