--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
   <script src="/app/date/date.service.js"></script>
   <script src="/app/stocks/api.service.js"></script>
   <script src="/app/stocks/stocks.service.js"></script>
+  <script src="/app/user/user.service.js"></script>
+  <script src="/app/trade/trade.service.js"></script>
   <!-- Controllers -->
   <script src="/app/date/date.controller.js"></script>
   <script src="/app/stocks/stocks.controller.js"></script>
