--- a/index.html
+++ b/index.html
@@ -63,13 +63,14 @@
   <script src="/app/date/date.service.js"></script>
   <script src="/app/stocks/api.service.js"></script>
   <script src="/app/stocks/stocks.service.js"></script>
-  <script src="/app/trade/trade.service.js"></script>
   <script src="/app/portfolio/portfolio.service.js"></script>
+  <script src="/app/transacts/transacts.service.js"></script>
+  <script src="/app/trade/trade.service.js"></script>
   <!-- Controllers -->
   <script src="/app/date/date.controller.js"></script>
   <script src="/app/stocks/stocks.controller.js"></script>
   <script src="/app/portfolio/portfolio.controller.js"></script>
+  <script src="/app/transacts/transacts.controller.js"></script>
   <script src="/app/trade/trade.controller.js"></script>
-  <script src="/app/transactions/transactions.controller.js"></script>
 
 </html>
