--- a/app/stocks/stocks.view.html
+++ b/app/stocks/stocks.view.html
@@ -4,7 +4,7 @@
     <input type="text" class="form-control" ng-model="symbol">
   </form>
 
-  <table id="stocks-index" class="table">
+  <table id="stocks-index-table" class="table">
     <thead>
       <tr>
         <th>Symbol</th>
