--- a/app/portfolio/portfolio.view.html
+++ b/app/portfolio/portfolio.view.html
@@ -51,7 +51,7 @@
         <td>{{ item["1d"] | currency }}</td>
         <td>{{ item["7d"] | currency }}</td>
         <td>{{ item["30d"] | currency }}</td>
-        <td><a class="trade-link" ui-sref="app.trade" ng-click="makeTrade($event)">Trade</a>
+        <td><a class="trade-link" ui-sref="app.trade({ company:item.symbol, price:item.currentPrice, buySell:'sell', quantity:item.quantity })" ng-click="makeTrade($event)">Trade</a>
       </tr>
     </tbody>
   </table>
